<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>polygon_plugins</name>
  <version>0.0.0</version>
  <description>This package is tutorial package to use ros pluginlib which tools for writing and dynamically loading plugins using the ROS build infrastructure. In this package, a plugin class that uses pluginlib is declared, and creates an XML file the plugin loader to finds a library and know what to reference within the library.</description>
  <maintainer email="hjkim@robotis.com">Hyejong KIM</maintainer>
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>pluginlib</depend>
  <depend>polygon_base</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
